styles feature & adds sidebar content

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    
     <div class="sidebar">
       <img class="logo" src="img/logo.png" alt="Wiki Logo">
+      <ul id="sidelist">
+        <li>Main page</li>
+        <li><a href="#">Content</a></li>
+        <li><a href="#">Featured contant</a></li>
+        <li><a href="#">Donate to Wikipedia</a></li>
+        <li><a href="#">Wikipedia store</a></li>
+      </ul>
     </div>
 
     <div class="container">
@@ -24,25 +32,25 @@
       </header>
       <div class="">
         <div id="welcome"class="row">
-          <div class="col-md-6">
+          <div class="col-xs-6">
               <h1>Welcome to <a href="#">Wikipedia</a>,</h1>
               <p>the free encylopedia that everyone can edit.</p>
           </div>
-          <div class="col-md-2">
+          <div class="col-xs-2">
             <ul>
               <li><a href="#">Arts</a></li>
               <li><a href="#">Biography</a></li>
               <li><a href="#">Geography</a></li>
             </ul>
           </div>
-          <div class="col-md-2">
+          <div class="col-xs-2">
             <ul>
               <li><a href="#">History</a></li>
               <li><a href="#">Mathematics</a></li>
               <li><a href="#">Science</a></li>
             </ul>
           </div>
-          <div class="col-md-2">
+          <div class="col-xs-2">
             <ul>
               <li><a href="#">Society</a></li>
               <li><a href="#">Technology</a></li>
@@ -102,6 +110,16 @@
               <li>2001 – American singer Aaliyah and various members of her record company were killed when their overloaded aircraft crashed shortly after takeoff from Marsh Harbour Airport in Marsh Harbour, The Bahamas.</li>
             </ul>
           </div>
+
+        </div>
+        <div id="feature">
+        <h4 id="pink-heading">Today's featured picture</h4>
+        <img class="bird" src="img/bird.jpg" alt="Bird Picture">
+        <p>The black-fronted dotterel (Elseyornis melanops) is a small, slender
+          plover found in Australia and New Zealand. It is common in freshwater
+          wetlands, where it can be found feeding on insects and other small
+          creatures.</p>
+
 
         </div>
       </div>
